tests/rosetta/out/C/biorhythms.error
cc: exit status 1
/tmp/biorhythms.c: In function ‘parseIntStr’:
/tmp/biorhythms.c:184:11: error: request for member ‘len’ in something not a structure or union
  184 |   if ((str.len > 0 && tmp1 == "-")) {
      |           ^
/tmp/biorhythms.c:201:18: error: request for member ‘len’ in something not a structure or union
  201 |   while ((i < str.len)) {
      |                  ^
/tmp/biorhythms.c: In function ‘biorhythms’:
/tmp/biorhythms.c:357:32: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  357 |   list_int quadrants_data[] = {tmp22, tmp23, tmp24, tmp25};
      |                                ^~~~~
/tmp/biorhythms.c:357:39: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  357 |   list_int quadrants_data[] = {tmp22, tmp23, tmp24, tmp25};
      |                                       ^~~~~
/tmp/biorhythms.c:357:46: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  357 |   list_int quadrants_data[] = {tmp22, tmp23, tmp24, tmp25};
      |                                              ^~~~~
/tmp/biorhythms.c:357:53: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  357 |   list_int quadrants_data[] = {tmp22, tmp23, tmp24, tmp25};
      |                                                     ^~~~~
/tmp/biorhythms.c:362:17: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  362 |     int cycle = cycles.data[i];
      |                 ^~~~~~
/tmp/biorhythms.c:382:21: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  382 |       char *trend = quadrants.data[quadrant].data[0];
      |                     ^~~~~~~~~
/tmp/biorhythms.c:383:20: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  383 |       char *next = quadrants.data[quadrant].data[1];
      |                    ^~~~~~~~~
/tmp/biorhythms.c:386:13: warning: implicit declaration of function ‘contains’ [-Wimplicit-function-declaration]
  386 |       if ((!contains(pct, "."))) {
      |             ^~~~~~~~
/tmp/biorhythms.c:406:35: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  406 |     printf("%d\n", cycle + posStr + " : " + description);
      |                    ~~~~~~~~~~~~~~ ^
      |                          |        |
      |                          char *   char *
/tmp/biorhythms.c: In function ‘mochi_main’:
/tmp/biorhythms.c:422:28: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  422 |   list_int pairs_data[] = {tmp38, tmp39, tmp40};
      |                            ^~~~~
/tmp/biorhythms.c:422:35: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  422 |   list_int pairs_data[] = {tmp38, tmp39, tmp40};
      |                                   ^~~~~
/tmp/biorhythms.c:422:42: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  422 |   list_int pairs_data[] = {tmp38, tmp39, tmp40};
      |                                          ^~~~~
/tmp/biorhythms.c:426:21: error: invalid initializer
  426 |     list_string p = pairs.data[idx];
      |                     ^~~~~
